package boundary;

import control.ConveyorController;

public class ConveyorAdminUI {
    private ConveyorController controller = new ConveyorController();

    public void showConveyorDashboard() {}
    public void pressTurnOnConveyors() {}
    public void pressTurnOffConveyors() {}
    public void pressRestartConveyor(int conveyorId) {}
    public void displayConveyorStatus(int conveyorId) {}
}