package boundary;

import control.ParkingLotController;

public class ParkingLotUI {
    private ParkingLotController controller = new ParkingLotController();

    public void displayParkingLots() {}
    public void displayParkingLotDetails(int lotId) {}
    public void editParkingLotForm(int lotId) {}
    public void submitParkingLotChanges(Object formData) {}
}