package boundary;
import control.PricingController;

public class PricingUI {
    private PricingController controller = new PricingController();

    public void showImportPriceListScreen() {}
    public void uploadPriceListFile(String jsonFile) {}
    public void displayPriceHistory(int lotId) {}
}

