package control;

import entity.Conveyors;

public class ConveyorController {
	
	public void turnOnAll() {}
    public void turnOffAll() {}
    public void restartConveyor(int conveyorId) {}
    public void runIntegrityCheck(int conveyorId) {}
    public void sendMoveCommand(int conveyorId, String vehicleId) {}

}
