package control;


import entity.Conveyors;

public class IntegrityCheckProcess {
    public void start() {}
    public void timeoutRetry() {}
    public void reportFailure() {}
    public void reportSuccess() {}
}