package control;

import java.util.List;

import entity.ParkingLotPriceHistory;
import entity.PriceList;

public class PricingController {

	    public void importPriceList(int parkingLotId, String jsonFilePath) {}
	    public List<ParkingLotPriceHistory> getPriceHistory(int parkingLotId) { return null; }
	    public PriceList getActivePriceList(int parkingLotId) { return null; }
}
