package entity;



public enum ConveyorStatus {
    OFF, CHECKING, OPERATIONAL, PAUSED, FAILED
}
